feat: Implement dark mode and theme switching
Integrates a dark mode toggle and applies dark theme styles across the application components and layout. This enhances user experience by providing a visually comfortable viewing option in low-light environments.

The changes include:
- Adding logic to `index.html` to detect and apply the initial theme based on user preferences or local storage.
- Updating component styles (Button, SelectDropdown, LoadingSpinner, ResultsTable) to support dark mode variations using Tailwind CSS classes.
- Introducing a new `ThemeSwitcher` component to allow users to manually toggle between light and dark themes.
- Adjusting the `App.tsx` layout to accommodate the theme switcher and ensure overall dark mode compatibility.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Turkey Business Finder</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      // Prevents Flash of Incorrect Theme by applying the theme before the page renders
+      if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      } else {
+        document.documentElement.classList.remove('dark');
+      }
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script type="importmap">
 {
@@ -18,7 +25,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-100">
+  <body class="bg-white dark:bg-[#121212] text-gray-800 dark:text-gray-200 transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
